tests/machine/x/scala/dataset_sort_take_limit.error
exit status 1
/workspace/mochi/tests/machine/x/scala/dataset_sort_take_limit.scala:7: error: value price is not a member of scala.collection.immutable.Map[String,Any]
    val expensive = (for { p <- products } yield p).sortBy(p => -p.price).map(p => p).drop(1).take(3)
                                                                   ^
one error found
